<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/platinum"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="cursive"
        android:text="@string/app_name"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/s_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:cardCornerRadius="14dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appName">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/s_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/background_card">

            <ImageView
                android:id="@+id/s_monday"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_streak_empty"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/s_tuesday"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toEndOf="@+id/s_monday"
                app:layout_constraintTop_toTopOf="@+id/s_monday"
                app:srcCompat="@drawable/ic_streak_empty"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/s_wednesday"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toEndOf="@+id/s_tuesday"
                app:layout_constraintTop_toTopOf="@+id/s_tuesday"
                app:srcCompat="@drawable/ic_streak_empty"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/s_thursday"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toEndOf="@+id/s_wednesday"
                app:layout_constraintTop_toTopOf="@+id/s_wednesday"
                app:srcCompat="@drawable/ic_streak_empty"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/s_friday"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toEndOf="@+id/s_thursday"
                app:layout_constraintTop_toTopOf="@+id/s_thursday"
                app:srcCompat="@drawable/ic_streak_empty"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/s_saturday"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toEndOf="@+id/s_friday"
                app:layout_constraintTop_toTopOf="@+id/s_friday"
                app:srcCompat="@drawable/ic_streak_empty"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/s_sunday"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toEndOf="@+id/s_saturday"
                app:layout_constraintTop_toTopOf="@+id/s_saturday"
                app:srcCompat="@drawable/ic_streak_empty"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/t_monday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="cursive"
                android:text="@string/m"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/s_monday"
                app:layout_constraintStart_toStartOf="@+id/s_monday"
                app:layout_constraintTop_toBottomOf="@+id/s_monday" />

            <TextView
                android:id="@+id/t_tuesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:fontFamily="cursive"
                android:text="@string/t"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@+id/s_tuesday"
                app:layout_constraintStart_toStartOf="@+id/s_tuesday"
                app:layout_constraintTop_toTopOf="@+id/t_monday" />

            <TextView
                android:id="@+id/t_wednesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="cursive"
                android:text="@string/w"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@+id/s_wednesday"
                app:layout_constraintStart_toStartOf="@+id/s_wednesday"
                app:layout_constraintTop_toTopOf="@+id/t_tuesday" />

            <TextView
                android:id="@+id/t_thursday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="cursive"
                android:text="@string/t"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@+id/s_thursday"
                app:layout_constraintStart_toStartOf="@+id/s_thursday"
                app:layout_constraintTop_toTopOf="@+id/t_wednesday" />

            <TextView
                android:id="@+id/t_friday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:layout_marginTop="1dp"
                android:fontFamily="cursive"
                android:text="@string/f"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/s_friday"
                app:layout_constraintStart_toStartOf="@+id/s_friday"
                app:layout_constraintTop_toTopOf="@+id/t_thursday" />

            <TextView
                android:id="@+id/t_saturday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="cursive"
                android:text="@string/s"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/s_saturday"
                app:layout_constraintStart_toStartOf="@+id/s_saturday"
                app:layout_constraintTop_toTopOf="@+id/t_friday" />

            <TextView
                android:id="@+id/t_sunday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="cursive"
                android:text="@string/s"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/s_sunday"
                app:layout_constraintStart_toStartOf="@+id/s_sunday"
                app:layout_constraintTop_toTopOf="@+id/t_saturday" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <View
        android:id="@+id/line4"
        android:layout_width="0.7dp"
        android:layout_height="0dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintBottom_toTopOf="@+id/line2"
        app:layout_constraintEnd_toStartOf="@+id/title1"
        app:layout_constraintStart_toEndOf="@+id/title3"
        app:layout_constraintTop_toBottomOf="@+id/line"
        app:layout_constraintVertical_bias="1.0" />

    <View
        android:id="@+id/line2"
        android:layout_width="0dp"
        android:layout_height="0.7dp"
        android:layout_marginBottom="16dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintBottom_toTopOf="@+id/restoreData"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/t_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/s_card" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:text="@string/total_s"
        android:textColor="@color/background"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/title2"
        app:layout_constraintEnd_toStartOf="@+id/title2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/t_info" />

    <TextView
        android:id="@+id/title1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:text="@string/total_d"
        android:textColor="@color/background"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/title2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/title2"
        app:layout_constraintTop_toBottomOf="@+id/t_info" />

    <TextView
        android:id="@+id/total_s"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="cursive"
        android:textColor="@color/number_color"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/title"
        app:layout_constraintStart_toStartOf="@+id/title"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/total_d"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="cursive"
        android:textColor="@color/number_color"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/title1"
        app:layout_constraintStart_toStartOf="@+id/title1"
        app:layout_constraintTop_toBottomOf="@+id/title1" />

    <TextView
        android:id="@+id/title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:text="@string/rate"
        android:textColor="@color/pink"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/t_info" />

    <TextView
        android:id="@+id/rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="cursive"
        android:textColor="@color/number_color"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/title2"
        app:layout_constraintStart_toStartOf="@+id/title2"
        app:layout_constraintTop_toBottomOf="@+id/title2" />

    <TextView
        android:id="@+id/title3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:text="@string/best_s"
        android:textColor="@color/background_card"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/title1"
        app:layout_constraintStart_toEndOf="@+id/title"
        app:layout_constraintTop_toTopOf="@+id/title" />

    <TextView
        android:id="@+id/best_s"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="cursive"
        android:textColor="@color/number_color"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/title3"
        app:layout_constraintStart_toStartOf="@+id/title3"
        app:layout_constraintTop_toBottomOf="@+id/title3" />

    <Button
        android:id="@+id/restoreData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restoreData"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rate" />

    <View
        android:id="@+id/line"
        android:layout_width="0dp"
        android:layout_height="0.7dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/t_info" />

    <View
        android:id="@+id/line3"
        android:layout_width="0.7dp"
        android:layout_height="0dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintBottom_toTopOf="@+id/line2"
        app:layout_constraintEnd_toStartOf="@+id/title3"
        app:layout_constraintStart_toEndOf="@+id/title"
        app:layout_constraintTop_toBottomOf="@+id/line" />

</androidx.constraintlayout.widget.ConstraintLayout>